# molang

./: .gitignore  Cargo.toml  INTERNALS.md  README-PT-BR.md  README.md  REPL_DEMO.md  TODO.md  molang_doc.txt
.claude/: settings.local.json
doc/: INTERNALS-PT-BR.md
src/: ast.rs  builtins.rs  eval.rs  executor.rs  ir.rs  jit.rs  jit_cache.rs  lexer.rs  lib.rs  main.rs  parser.rs
