[package]
name = "molang"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
cranelift = "0.104"
cranelift-module = "0.104"
cranelift-jit = "0.104"
cranelift-frontend = "0.104"
indexmap = "=2.11.0"
rand = { version = "0.8", features = ["small_rng"] }
once_cell = "1.19"
reedline = "0.37"
nu-ansi-term = "0.50"
home = "=0.5.9"
